--- a/app/src/main/res/menu/main_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/main_bottom_navigation_menu.xml
@@ -8,9 +8,9 @@
         android:icon="@drawable/ic_search"
         android:title="@string/search" />
 
-    <item android:id="@+id/action_profile"
-        android:icon="@drawable/ic_profile"
-        android:title="@string/profile" />
+    <item android:id="@+id/action_questions"
+        android:icon="@drawable/ic_questions"
+        android:title="@string/questions" />
 
     <item android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings"
